--- a/InicioAsesor/templates/InicioAsesor/inicio.html
+++ b/InicioAsesor/templates/InicioAsesor/inicio.html
@@ -3,22 +3,7 @@
 
 {% block content %}
 <div class="pd-ltr-20">
-    <div class="card-box pd-20 height-100-p mb-30">
-        <div class="row align-items-center">
-            <div class="col-md-4">
-                <img src="{% static 'BaseApp/vendors/images/banner-img.png' %}" alt="">
-            </div>
-            <div class="col-md-8">
-                <h4 class="font-20 weight-500 mb-10 text-capitalize">
-                    Hola Bienvenido <div class="weight-600 font-30 text-blue">{{user.first_name}} {{user.last_name}}!</div>
-                </h4>
-                <p class="font-10 max-width-600">Lo Que Esta Pendiente Hoy</p>
-                <p class="font-10 max-width-600">Pendiente 1 <span class="badge bg-success"><ion-icon name="checkmark-circle-sharp"></ion-icon></span></p>
-                <p class="font-10 max-width-600">Pendiente 2</p>
-                <p class="font-10 max-width-600">Pendiente 3</p>
-            </div>
-        </div>
-    </div>
+
     <div class="row">
         <div class="col-xl-3 mb-30">
             <div class="card-box height-100-p widget-style1">
@@ -27,8 +12,8 @@
                         <img src="https://img.icons8.com/fluency/96/000000/jumper.png"/>
                     </div>
                     <div class="widget-data">
-                        <div class="h4 mb-0">2020</div>
-                        <div class="weight-600 font-14">Articulos</div>
+                        <div class="h4 mb-0">2000</div>
+                        <div class="weight-600 font-14">Articulos Vendidos</div>
                     </div>
                 </div>
             </div>
@@ -40,8 +25,8 @@
                         <img src="https://img.icons8.com/fluency/96/000000/shop-local.png"/>
                     </div>
                     <div class="widget-data">
-                        <div class="h4 mb-0">400</div>
-                        <div class="weight-600 font-14">Pedidos</div>
+                        <div class="h4 mb-0">100</div>
+                        <div class="weight-600 font-14">Pedidos Hechos</div>
                     </div>
                 </div>
             </div>
@@ -53,8 +38,8 @@
                         <img src="https://img.icons8.com/fluency/96/000000/group.png"/>
                     </div>
                     <div class="widget-data">
-                        <div class="h4 mb-0">350</div>
-                        <div class="weight-600 font-14">Clientes</div>
+                        <div class="h4 mb-0">50</div>
+                        <div class="weight-600 font-14">Mis Clientes</div>
                     </div>
                 </div>
             </div>
@@ -66,7 +51,7 @@
                         <img src="https://img.icons8.com/fluency/96/000000/cash-register.png"/>
                     </div>
                     <div class="widget-data">
-                        <div class="h4 mb-0">Q.6060</div>
+                        <div class="h4 mb-0">Q.4040</div>
                         <div class="weight-600 font-14">Ventas</div>
                     </div>
                 </div>
