Gracias a Dios Inicio de Interface Asesor Viernes

--- a/BaseApp/templates/BaseApp/baseasesor.html
+++ b/BaseApp/templates/BaseApp/baseasesor.html
@@ -68,9 +68,6 @@
 							<span class="micon dw dw-house-1"></span><span class="mtext">Articulos</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="#">Ingreso Nuevo Articulo</a></li>
-							<li><a href="#">Actualizar Articulo</a></li>
-							<li><a href="#">Eliminar Articulo</a></li>
 							<li><a href="#">Inventario Articulos</a></li>
 						</ul>
 					</li>
@@ -79,10 +76,6 @@
 							<span class="micon dw dw-user1"></span><span class="mtext">Clientes</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="#">Nuevo Cliente</a></li>
-							<li><a href="#">Actualizar Cliente</a></li>
-							<li><a href="#">Eliminar Cliente</a></li>
-							<li><a href="#">Descuento Cliente</a></li>
 							<li><a href="#">Historial Cliente</a></li>
 						</ul>
 					</li>
@@ -92,7 +85,6 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="#">Programar Envio</a></li>
-							<li><a href="#">Historial de Envio</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -101,8 +93,6 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="#">Nueva Venta</a></li>
-							<li><a href="#">Actualizar Venta</a></li>
-							<li><a href="#">Eliminar Venta</a></li>
 							<li><a href="#">Historial Venta</a></li>
 						</ul>
 					</li>
@@ -112,8 +102,6 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="#">Ingreso de Cheque</a></li>
-							<li><a href="#">Actualizar Cheque</a></li>
-							<li><a href="#">Eliminar Cheque</a></li>
 							<li><a href="#">Historial Cheques</a></li>
 						</ul>
 					</li>
@@ -123,8 +111,6 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="#">Reporte Ventas</a></li>
-							<li><a href="#">Reporte Por Articulo</a></li>
-							<li><a href="#">Reporte por Fecha</a></li>
 							<li><a href="#">Reporte por Cliente</a></li>
 						</ul>
 					</li>
@@ -133,36 +119,7 @@
 							<span class="micon dw dw-right-arrow1"></span><span class="mtext">Promociones</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="#">Descuentos por Articulo</a></li>
-							<li><a href="#">Descuentos por Cliente</a></li>
-							<li><a href="#">Desucuentos Generales</a></li>
-						</ul>
-					</li>
-					<li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle">
-							<span class="micon dw dw-browser2"></span><span class="mtext">Facturas</span>
-						</a>
-						<ul class="submenu">
-							<li><a href="#">Factura de Pedido</a></li>
-						</ul>
-					</li>
-					<li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle">
-							<span class="micon dw dw-notebook"></span><span class="mtext">Notas de Credito</span>
-						</a>
-						<ul class="submenu">
-							<li><a href="#">Nota Credito de Pedido</a></li>
-						</ul>
-					</li>
-
-					<li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle">
-							<span class="micon dw dw-copy"></span><span class="mtext">Recordatorios</span>
-						</a>
-						<ul class="submenu">
-							<li><a href="#">Nuevo Recordatorio</a></li>
-							<li><a href="#">Actualizar Recordatorio</a></li>
-							<li><a href="#">Eliminar Recordatorio</a></li>
+							<li><a href="#">Verificar Promociones</a></li>
 						</ul>
 					</li>
 				</ul>
