Gracias a Dios Formulario de Ingreso Articulo Viernes

--- a/BaseApp/templates/BaseApp/base.html
+++ b/BaseApp/templates/BaseApp/base.html
@@ -68,7 +68,7 @@
 							<span class="micon dw dw-house-1"></span><span class="mtext">Articulos</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="#">Ingreso Nuevo Articulo</a></li>
+							<li><a href="{% url 'NuevoArt' %}">Ingreso Nuevo Articulo</a></li>
 							<li><a href="#">Actualizar Articulo</a></li>
 							<li><a href="#">Eliminar Articulo</a></li>
 							<li><a href="#">Inventario Articulos</a></li>
