Gracias a Dios Formulario de Ingreso Articulo Viernes

--- a/BaseApp/templates/BaseApp/baseasesor.html
+++ b/BaseApp/templates/BaseApp/baseasesor.html
@@ -1,4 +1,4 @@
-{% if user.is_authenticated and user.is_active %}
+{% if user.is_authenticated and user.is_active and user.rol == "asesor" %}
 <!DOCTYPE html>
 <html>
 	{% load static %}
