Gracias a Dios Terminado el Form de Cliente Nuevo Sabado

--- a/BaseApp/templates/BaseApp/base.html
+++ b/BaseApp/templates/BaseApp/base.html
@@ -79,7 +79,7 @@
 							<span class="micon dw dw-user1"></span><span class="mtext">Clientes</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="#">Nuevo Cliente</a></li>
+							<li><a href="{% url 'NuevoCliente' %}">Nuevo Cliente</a></li>
 							<li><a href="#">Actualizar Cliente</a></li>
 							<li><a href="#">Eliminar Cliente</a></li>
 							<li><a href="#">Descuento Cliente</a></li>
