--- a/IngresosApp/templates/IngresosApp/nuevocliente.html
+++ b/IngresosApp/templates/IngresosApp/nuevocliente.html
@@ -7,55 +7,55 @@
         <form method="POST">
             {% csrf_token %}
             <div class="container overflow-hidden">
-                <h3>Ingreso de Nuevo Articulo</h3><hr><br>
+                <h3>Ingreso de Nuevo Cliente</h3><hr><br>
                 <div class="row gy-5">
                   <div class="col-6">
-                    <label for="">Codigo Articulo</label>
+                    <label for="">Codigo Cliente</label>
                     {{form.codigo}}
                     <br>
                   </div>
                   <div class="col-6">
-                    <label for="">Referencia Articulo</label>
-                    {{form.referencia}}
+                    <label for="">Nit Cliente
+                    {{form.nit}}
                     <br>
                   </div>
                   
                   <div class="col-6">
-                    <label for="">Descripcion Articulo</label>
-                    {{form.descripcion}}
+                    <label for="">Tipo Cliente</label>
+                    {{form.tipo}}
                     <br>
                   </div>
                   <div class="col-6">
-                    <label for="">Marca Articulo</label>
-                    {{form.marca}}
+                    <label for="">Nombres Cliente</label>
+                    {{form.nombres}}
                     <br>
                   </div>
             
                   <div class="col-6">
-                    <label for="">Precio Compra Articulo</label>
-                    {{form.precio_compra}}
+                    <label for="">Apellidos Cliente</label>
+                    {{form.apellidos}}
                     <br>
                   </div>
                   <div class="col-6">
-                    <label for="">Precio Venta Articulo</label>
-                    {{form.precio_venta}}
-                    <br>
-                  </div>
-
-                  <div class="col-6">
-                    <label for="">Descuento Articulo</label>
-                    {{form.precio_compra}}
-                    <br>
-                  </div>
-                  <div class="col-6">
-                    <label for="">Existencia Articulo</label>
-                    {{form.precio_venta}}
+                    <label for="">Direccion Cliente</label>
+                    {{form.direccion}}
                     <br>
                   </div>
 
                   <div class="col-6">
-                    <label for="">Imagen Articulo</label>
-                    {{form.imagen}}
+                    <label for="">Telefono Cliente</label>
+                    {{form.telefono}}
+                    <br>
+                  </div>
+
+                  <div class="col-6">
+                    <label for="">Fecha Nacimiento Cliente</label>
+                    {{form.fecha_nac}}
+                    <br>
+                  </div>
+                  <div class="col-6">
+                    <label for="">Cuenta Corriente Cliente</label>
+                    {{form.cuenta}}
                     <br>
                   </div>
                   <div class="col-6">
@@ -68,7 +68,6 @@
               </div>
              <div class="container" align="center">
                 <button class="btn btn-success" type="submit">Ingresar</button>
-                <button class="btn btn-danger" type="reset">Cancelar</button>
              </div>
 
         </form>
