Gracias a Dios los modelos Sabado

--- a/BaseApp/templates/BaseApp/base.html
+++ b/BaseApp/templates/BaseApp/base.html
@@ -91,7 +91,7 @@
 							<span class="micon dw dw-bus"></span><span class="mtext">Envios</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="#">Programar Envio</a></li>
+							<li><a href="{% url 'NuevoEnvio' %}">Programar Envio</a></li>
 							<li><a href="#">Historial de Envio</a></li>
 						</ul>
 					</li>
@@ -111,9 +111,6 @@
 							<span class="micon dw dw-invoice"></span><span class="mtext">Cheque</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="#">Ingreso de Cheque</a></li>
-							<li><a href="#">Actualizar Cheque</a></li>
-							<li><a href="#">Eliminar Cheque</a></li>
 							<li><a href="#">Historial Cheques</a></li>
 						</ul>
 					</li>
