--- a/IngresosApp/templates/IngresosApp/nuevocliente.html
+++ b/IngresosApp/templates/IngresosApp/nuevocliente.html
@@ -68,6 +68,7 @@
               </div>
              <div class="container" align="center">
                 <button class="btn btn-success" type="submit">Ingresar</button>
+                <button class="btn btn-danger" type="reset">Cancelar</button>
              </div>
 
         </form>
