Gracias a Dios Ingreso de Articulos Terminado

--- a/BaseApp/templates/BaseApp/base.html
+++ b/BaseApp/templates/BaseApp/base.html
@@ -108,10 +108,10 @@
 					</li>
 					<li class="dropdown">
 						<a href="javascript:;" class="dropdown-toggle">
-							<span class="micon dw dw-invoice"></span><span class="mtext">Cheque</span>
+							<span class="micon dw dw-invoice"></span><span class="mtext">Pagos</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="#">Historial Cheques</a></li>
+							<li><a href="#">Historial Pagos</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
