Gracias a Dios Terminado Ingreso de Articulos

--- a/BaseApp/templates/BaseApp/base.html
+++ b/BaseApp/templates/BaseApp/base.html
@@ -111,6 +111,9 @@
 							<span class="micon dw dw-invoice"></span><span class="mtext">Pagos</span>
 						</a>
 						<ul class="submenu">
+							<li><a href="#">Pago con Cheque</a></li>
+							<li><a href="#">Pago con Deposito</a></li>
+							<li><a href="#">Pago en Efectivo</a></li>
 							<li><a href="#">Historial Pagos</a></li>
 						</ul>
 					</li>
