--- a/IngresosApp/templates/IngresosApp/nuevoenvio.html
+++ b/IngresosApp/templates/IngresosApp/nuevoenvio.html
@@ -9,66 +9,11 @@
             <div class="container overflow-hidden">
                 <h3>Ingreso de Nuevo Envio</h3><hr><br>
                 <div class="row gy-5">
-                  <div class="col-6">
-                    <label for="">Codigo Envio</label>
-                    {{form.codigo}}
-                    <br>
-                  </div>
-                  <div class="col-6">
-                    <label for="">Tipo de Envio
-                    {{form.tipo}}
-                    <br>
-                  </div>
                   
-                  <div class="col-6">
-                    <label for="">Remitente</label>
-                    {{form.remitente}}
+                    {{form.as_p}}
                     <br>
-                  </div>
-                  <div class="col-6">
-                    <label for="">Destinatario</label>
-                    {{form.destinatario}}
-                    <br>
-                  </div>
-            
-                  <div class="col-6">
-                    <label for="">Direccion del Envio</label>
-                    {{form.direccion}}
-                    <br>
-                  </div>
-                  <div class="col-6">
-                    <label for="">Telefono de Contacto</label>
-                    {{form.telefono}}
-                    <br>
-                  </div>
-
-                  <div class="col-6">
-                    <label for="">Estado del Envio</label>
-                    {{form.estado}}
-                    <br>
-                  </div>
-
-                  <div class="col-6">
-                    <label for="">Monto del Envio</label>
-                    {{form.monto}}
-                    <br>
-                  </div>
-
-                  <div class="col-6">
-                    <label for="">Guia de Rastreo</label>
-                    {{form.guia}}
-                    <br>
-                  </div>
-                  <div class="col-6">
-                    <label for="">Observaciones del Envio</label>
-                    {{form.observacion}}
-                    <br>
-                  </div>
-                  <div class="col-6">
-                    <label for="">Usuario</label>
-                    <input type="text" class="form-control" name="user" readonly required value="{{user.username}}">
-                    <br>
-                  </div>
+                  
+                  
 
                 </div>
               </div>
