--- a/IngresosApp/templates/IngresosApp/nuevoart.html
+++ b/IngresosApp/templates/IngresosApp/nuevoart.html
@@ -7,7 +7,7 @@
 {% if messages %}
           <ul class="messages">
           {% for message in messages %}
-          <li> i{% if message.tags %} class="text-success text-center {{ message.tags }}"{% endif %}>{{ message }}</li>
+          <li>{% if message.tags %} class="text-success text-center {{ message.tags }}"{% endif %}>{{ message }}</li>
           {% endfor %}
 {% endif %}   
 <div class="pd-ltr-20">
@@ -15,9 +15,11 @@
         <form method="POST" enctype="multipart/form-data">{% csrf_token %}
             <div class="container overflow-hidden">
                 <h3>Ingreso de Nuevo Articulo</h3><hr><br>
+                <div class="row gy-5">
                 {{form.as_p}}
                 </div>
-              </div>
+            </div>
+            
              <div class="container" align="center">
                 <button class="btn btn-success" type="submit">Ingresar</button>
                 <button class="btn btn-danger" type="reset">Cancelar</button>
