--- a/InicioAdmin/templates/InicioAdmin/inicio.html
+++ b/InicioAdmin/templates/InicioAdmin/inicio.html
@@ -27,8 +27,14 @@
                         <img src="https://img.icons8.com/fluency/96/000000/jumper.png"/>
                     </div>
                     <div class="widget-data">
-                        <div class="h4 mb-0">2020</div>
+                        <div class="h4 mb-0">
+                            {{ conteo }}
+                        </div>
+                        {% if conteo == 1 %}
+                        <div class="weight-600 font-14">Articulo</div>
+                        {% else %}
                         <div class="weight-600 font-14">Articulos</div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
