--- a/IngresosApp/templates/IngresosApp/nuevoart.html
+++ b/IngresosApp/templates/IngresosApp/nuevoart.html
@@ -2,17 +2,10 @@
 {% load static %}
 
 
-{% block content %}
-
-{% if messages %}
-          <ul class="messages">
-          {% for message in messages %}
-          <li>{% if message.tags %} class="text-success text-center {{ message.tags }}"{% endif %}>{{ message }}</li>
-          {% endfor %}
-{% endif %}   
+{% block content %} 
 <div class="pd-ltr-20">
     <div class="card-box pd-20 height-100-p mb-30">
-        <form method="POST" enctype="multipart/form-data">{% csrf_token %}
+        <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
             <div class="container overflow-hidden">
                 <h3>Ingreso de Nuevo Articulo</h3><hr><br>
                 <div class="row gy-5">
@@ -30,6 +23,16 @@
     
     
 </div>
-
+{% if messages %}
+          <ul class="messages">
+          {% for message in messages %}
+          <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>{{message}}</strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          {% endfor %}
+{% endif %}  
 {% endblock %}
 
