Gracias a Dios Terminados Los Ingresos Basicos y unos Detalles Lunes

--- a/BaseApp/templates/BaseApp/base.html
+++ b/BaseApp/templates/BaseApp/base.html
@@ -83,7 +83,7 @@
 							<li><a href="#">Actualizar Cliente</a></li>
 							<li><a href="#">Eliminar Cliente</a></li>
 							<li><a href="#">Descuento Cliente</a></li>
-							<li><a href="#">Historial Cliente</a></li>
+							<li><a href="{% url 'HistorialCliente' %}">Historial Cliente</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
