--- a/HistorialApp/templates/HistorialApp/detallecliente.html
+++ b/HistorialApp/templates/HistorialApp/detallecliente.html
@@ -5,38 +5,35 @@
 <div class="pd-20 card-box mb-30">
     <div class="clearfix">
         <div class="pull-left">
-            {% for detalle in form %} <h4 class="text-info">Cliente: </h4><h3 class="text-danger">{{ detalle.nombres }} {{ detalle.apellidos }}</h3> {% endfor %}
-            <p class="mb-30">Detalles del Cliente</p>
+            {% for detalle in form %} <h4 class="text-info">Cliente: </h4><h3 class="text-danger">{{ detalle.negocio }}</h3> 
+            <p class="mb-5">Nit: <strong>{{ detalle.nit }}</strong></p>
+            <p class="mb-30">Propietario: <strong>{{ detalle.nombres }} {{ detalle.apellidos }}</strong></p>
+            {% endfor %}
         </div>
         <div class="pull-right">
-            <button class="btn btn-primary btn-sm scroll-click" rel="content-y" onclick="javascript:window.print()"  data-toggle="collapse" role="button"><i class="fa fa-code"></i>Imprimir</button>
+            <button class="btn btn-primary btn-sm scroll-click" rel="content-y" onclick="javascript:window.print()"  data-toggle="collapse" role="button"><i class="fa fa-print"></i> Imprimir</button>
+            <a href="{% url 'HistorialCliente' %}" class="btn btn-success">Regresar</a>
         </div>
     </div>
     <form>
         {% for detalle in form %}
         <div class="row">
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-4 col-sm-12">
                 <div class="form-group">
                     <label>Codigo de Cliente</label>
                     <input type="text" class="form-control" value="{{ detalle.id }}" readonly>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-4 col-sm-12">
                 <div class="form-group">
                     <label>Nit de Cliente</label>
                     <input type="text" class="form-control" value="{{ detalle.nit }}" readonly>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-4 col-sm-12">
                 <div class="form-group">
-                    <label>Tipo de Cliente</label>
-                    <input type="text" class="form-control" value="{{ detalle.tipo }}" readonly>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-12">
-                <div class="form-group">
-                    <label>Telefono del Cliente</label>
-                    <input type="text" class="form-control" value="{{ detalle.telefono }}" readonly>
+                    <label>Negocio del Cliente</label>
+                    <input type="text" class="form-control" value="{{ detalle.negocio }}" readonly>
                 </div>
             </div>
         </div>  
@@ -65,7 +62,19 @@
         <div class="row">
             <div class="col-md-4 col-sm-12">
                 <div class="form-group">
-                    <label>Cuenta Corriente</label>
+                    <label>Telefono</label>
+                    <input type="text" class="form-control" value="{{ detalle.telefono }}" readonly>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label>Telefono 2</label>
+                    <input type="text" class="form-control" value="{{ detalle.telefono2 }}" readonly>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label>Compra Totales</label>
                     <input type="text" class="form-control" value="Q.{{ detalle.cuenta }}" readonly>
                 </div>
             </div>
