--- a/HistorialApp/templates/HistorialApp/historialcliente.html
+++ b/HistorialApp/templates/HistorialApp/historialcliente.html
@@ -8,27 +8,27 @@
             <h4 class="text-blue h4">Tabla de Todos los Clientes</h4>
         </div>
         <div class="pb-20">
-            <input type="text" class="form-control" id="filtrar" placeholder="Filtrar Por Nombre" name="f" autofocus="f" />
+            <input type="text" class="form-control" id="filtrar" placeholder="Filtrar Por Negocio" name="f" autofocus="f" />
             <table class="table hover multiple-select-row data-table-export nowrap">
                 <thead>
                     <tr>
-                        <th class="table-plus datatable-nosort">Codigo</th>
+                        <th class="table-plus datatable-nosort">Nit Cliente</th>
 									<th>Nombres</th>
-									<th>Tipo Cliente</th>
+									<th>Negocio Cliente</th>
 									<th>Telefono</th>
-									<th>Cumpleaños</th>
-									<th>Cuenta</th>
+									<th>Telefono 2</th>
+									<th>Correo Cliente</th>
                     </tr>
                 </thead>
                 <tbody id="nombres">
                     {% for cliente in cliente %}
                     <tr>
-                        <td class="table-plus"><a href="{% url 'DetalleCliente' cliente.id %}" class="text-white"><span class="badge bg-success">{{ cliente.codigo }}</span></a></td>
+                        <td class="table-plus"><a href="{% url 'DetalleCliente' cliente.nit %}" class="text-white"><span class="badge bg-success">{{ cliente.nit }}</span></a></td>
                         <td>{{ cliente.nombres }} {{ cliente.apellidos }}</td>
-                        <td>{{ cliente.tipo }}</td>
+                        <td>{{ cliente.negocio }}</td>
                         <td>{{ cliente.telefono }} </td>
-                        <td>{{ cliente.fecha_nac }}</td>
-                        <td>Q.{{ cliente.cuenta }}</td>
+                        <td>{{ cliente.telefono2 }} </td>
+                        <td>{{ cliente.correo }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -45,9 +45,9 @@ function filtro() {
 
   // Iteramos el arreglo de filas
   for(let i = 0; i < filas.length; i++){
-    // Por cada fila se obtiene la referencia a la columna lenguaje
-    let columnaLenguaje = filas[i].getElementsByTagName("td")[1];
-    // Se extrae el texto de la columna lenguaje
+    // Por cada fila se obtiene la referencia a la columna negocio
+    let columnaLenguaje = filas[i].getElementsByTagName("td")[2];
+    // Se extrae el texto de la columna negocio
     let lenguaje = columnaLenguaje.textContent;
     // Se muestra u oculta la fila si la entrada de texto
     // coincide con el texto de la columna lenguaje
