Gracias a Dios Terminado el Ingresos Historiales e Inicio de Inventario Lunes

--- a/BaseApp/templates/BaseApp/base.html
+++ b/BaseApp/templates/BaseApp/base.html
@@ -71,7 +71,7 @@
 							<li><a href="{% url 'NuevoArt' %}">Ingreso Nuevo Articulo</a></li>
 							<li><a href="#">Actualizar Articulo</a></li>
 							<li><a href="#">Eliminar Articulo</a></li>
-							<li><a href="#">Inventario Articulos</a></li>
+							<li><a href="{% url 'InventarioArticulos' %}">Inventario Articulos</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
