--- a/HistorialApp/templates/HistorialApp/inventarioarticulos.html
+++ b/HistorialApp/templates/HistorialApp/inventarioarticulos.html
@@ -3,47 +3,77 @@
 
 {% block content %}
 
-
-    <div class="pd-ltr-20 xs-pd-20-10">
-        <div class="min-height-200px">
-            <div class="page-header">
-                <div class="row">
-                    <div class="col-md-12 col-sm-12">
-                        <div class="title">
-                            <h4>Inventarios de Articulos</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="product-wrap">
-                <div class="product-list">
-                    <ul class="row">
-                        {% for inventario in inventario %}
-                        <li class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="product-box">
-                                <div class="producct-img"><img src="{{ inventario.imagen.url }}" alt=""></div>
-                                <div class="product-caption">
-                                    <h4><a href="#">{{ inventario.descripcion }}</a></h4>
-                                    <div class="price">
-                                        <ins>Codigo: <a href="#" class="text-danger">{{ inventario.codigo }}</a></ins>
-                                    </div>
-                                    <div class="price">
-                                        <ins>Referencia: <a href="#" class="text-danger">{{ inventario.referencia }}</a></ins>
-                                    </div>
-                                    <div class="price">
-                                        <ins>Precio:<a href="#" class="text-danger"> Q.{{ inventario.precio_venta }}</a></ins>
-                                        <ins>Existencia:<a href="#" class="text-danger"> {{ inventario.existencia }}</a></ins>
-                                    </div>
-                                    <a href="#" class="btn btn-outline-primary">Detalles</a>
-                                </div>
-                            </div>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </div>
-        </div>
+<div class="card-box mb-30">
+    <div class="pd-30">
+        <h4 class="text-blue h4">Tabla de Inventario</h4>
+        <input type="text" class="form-control" id="filtrar" placeholder="Filtrar Por Referencia" name="f" autofocus="f" />
     </div>
+    <div class="pb-20">
+        <table class="data-table table stripe hover nowrap">
+            <thead>
+                <tr>
+                    <th>Codigo</th>
+                    <th>Referencia</th>
+                    <th>Descripcion</th>
+                    <th>Color</th>
+                    <th>Existencia</th>
+                    <th>Imagen</th>
+                    <th class="datatable-nosort">Accion</th>
+                </tr>
+            </thead>
+            <tbody id="nombres">
+                {% for inventario in inventario %}
+                <tr>
+                    <td>{{ inventario.codigo }}</td>
+                    <td>{{ inventario.referencia }}</td>
+                    <td>{{ inventario.descripcion }}</td>
+                    <td>{{ inventario.color }}</td>
+                    <td>{{ inventario.existencia }}</td>
+                    <td><img src="{{ inventario.imagen.url }}" alt="" width="50"></td>
+                    <td>
+                        <div class="dropdown">
+                            <a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+                                <i class="dw dw-more"></i>
+                            </a>
+                            <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
+                                <a class="dropdown-item" href="#"><i class="dw dw-eye"></i> Ver</a>
+                                <a class="dropdown-item" href="{% url 'ActualizarArt' inventario.codigo %}"><i class="dw dw-edit2"></i> Editar</a>
+                                <a class="dropdown-item" href="#"><i class="dw dw-delete-3"></i> Borrar</a>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<script >
+    function filtro() {
+      // Accede al texto de entrada y a varios elementos del DOM
+      let valor = document.getElementById("filtrar").value.toUpperCase();
+      let nombres = document.getElementById("nombres");
+      let filas = nombres.getElementsByTagName("tr");
+    
+      // Iteramos el arreglo de filas
+      for(let i = 0; i < filas.length; i++){
+        // Por cada fila se obtiene la referencia a la columna negocio
+        let columnaLenguaje = filas[i].getElementsByTagName("td")[1];
+        console.log(columnaLenguaje);
+        // Se extrae el texto de la columna referencia
+        let lenguaje = columnaLenguaje.textContent;
+        // Se muestra u oculta la fila si la entrada de texto
+        // coincide con el texto de la columna lenguaje
+        filas[i].style.display = lenguaje.toUpperCase().indexOf(valor) > -1 ? "" : "none";
+      }
+    }
+    
+    // Se agrega un escuchador de eventos a la entrada de texto
+    // para activar la función de filtrado cada vez que el usuario
+    // ingresa texto en la entrada
+    document.getElementById("filtrar").addEventListener("keyup", filtro);
+    </script>
 
 
 {% endblock %}
