--- a/LoginApp/templates/LoginApp/login.html
+++ b/LoginApp/templates/LoginApp/login.html
@@ -22,7 +22,18 @@
 
    
     </form>
-
+    <br>
+    {% if messages %}
+    <ul class="messages">
+    {% for message in messages %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <strong>{{message}}</strong>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endfor %}
+{% endif %}  
 
 
 {% endblock %}
