--- a/BaseApp/templates/BaseApp/base.html
+++ b/BaseApp/templates/BaseApp/base.html
@@ -63,9 +63,12 @@
 		<div class="menu-block customscroll">
 			<div class="sidebar-menu">
 				<ul id="accordion-menu">
+					<a href="{% url 'InicioAdmin' %}" class="dropdown-toggle">
+						<span class="micon dw dw-house-1"></span><span class="mtext">Inicio</span>
+					</a>
 					<li class="dropdown">
 						<a href="javascript:;" class="dropdown-toggle">
-							<span class="micon dw dw-house-1"></span><span class="mtext">Articulos</span>
+							<span class="micon dw dw-shopping-bag"></span><span class="mtext">Articulos</span>
 						</a>
 						<ul class="submenu">
 							<li><a href="{% url 'NuevoArt' %}">Ingreso Nuevo Articulo</a></li>
