--- a/InventariosApp/templates/InventariosApp/clientes.html
+++ b/InventariosApp/templates/InventariosApp/clientes.html
@@ -40,7 +40,7 @@
                                 <i class="dw dw-more"></i>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-                                <a class="dropdown-item" href="#"><i class="dw dw-eye"></i> Ver</a>
+                                <a class="dropdown-item" href="{% url 'VerCliente' inventario.nit %}"><i class="dw dw-eye"></i> Ver</a>
                                 <a class="dropdown-item" href="#"><i class="dw dw-edit2"></i> Editar</a>
                                 <a class="dropdown-item" href="#"><i class="dw dw-delete-3"></i> Borrar</a>
                             </div>
