--- a/VerApp/templates/VerApp/clientes.html
+++ b/VerApp/templates/VerApp/clientes.html
@@ -3,81 +3,76 @@
 
 {% block content %}
 
-<div class="card-box mb-30">
-    <div class="pd-30">
-        <h4 class="text-info h4">Inventario de Clientes</h4>
-        <input type="text" class="form-control" id="filtrar" placeholder="Filtrar Por Negocio" name="f" autofocus="f" />
+<div class="pd-20 card-box mb-30">
+    <div class="clearfix">
+        <div class="pull-left">
+            {% for detalle in form %} <h4 class="text-info">Nit Cliente: </h4><h3 class="text-danger">{{ detalle.nit }}</h3> 
+            <p class="mb-5">Negocio Cliente: <strong>{{ detalle.negocio }}</strong></p>
+            <p class="mb-5">Nombre de Cliente: <strong>{{ detalle.nombres }} {{ detalle.apellidos }} </strong></p>
+            <p class="mb-30">Total Comprado: <strong>Q.{{ detalle.cuenta }}</strong></p>
+            {% endfor %}
+        </div>
+        <div class="pull-right">
+            <button class="btn btn-primary btn-sm scroll-click" rel="content-y" onclick="javascript:window.print()"  data-toggle="collapse" role="button"><i class="fa fa-print"></i> Imprimir</button>
+            <a href="{% url 'InventarioClientes' %}" class="btn btn-success">Regresar</a>
+        </div>
     </div>
-    <div class="pb-20">
-        <table class="data-table table stripe hover nowrap table-responsive-lg">
-            <thead>
-                <tr>
-                    <th>Nit Cliente</th>
-                    <th>Negocio Cliente</th>
-                    <th>Nombres Apellidos</th>
-                    <th>Direccion</th>
-                    <th>Telefono</th>
-                    <th>Telefono 2</th>
-                    <th>Correo Electronico</th>
-                    <th>Total Comprado</th>
-                    <th class="datatable-nosort">Accion</th>
-                </tr>
-            </thead>
-            <tbody id="nombres">
-                {% for inventario in art %}
-                <tr>
-                    <td>{{ inventario.nit }}</td>
-                    <td>{{ inventario.negocio }}</td>
-                    <td>{{ inventario.nombres }} {{ inventario.apellidos }}</td>
-                    <td>{{ inventario.direccion }}</td>
-                    <td>{{ inventario.telefono }}</td>
-                    <td>{{ inventario.telefono2 }}</td>
-                    <td>{{ inventario.correo }}</td>
-                    <td>{{ inventario.cuenta }}</td>
-                    <td>
-                        <div class="dropdown">
-                            <a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown-toggle" href="#" role="button" data-toggle="dropdown">
-                                <i class="dw dw-more"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-                                <a class="dropdown-item" href="#"><i class="dw dw-eye"></i> Ver</a>
-                                <a class="dropdown-item" href="#"><i class="dw dw-edit2"></i> Editar</a>
-                                <a class="dropdown-item" href="#"><i class="dw dw-delete-3"></i> Borrar</a>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+    <form>
+        {% for detalle in form %}
+        <div class="row">
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label>Nit Cliente</label>
+                    <input type="text" class="form-control" value="{{ detalle.nit }}" readonly>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label>Negocio Cliente</label>
+                    <input type="text" class="form-control" value="{{ detalle.negocio }}" readonly>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label>Nombre del Cliente</label>
+                    <input type="text" class="form-control" value="{{ detalle.nombres }} {{ detalle.apellidos }}" readonly>
+                </div>
+            </div>
+        </div>  
+        
+        <div class="row">
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label>Direccion del Cliente</label>
+                    <input type="text" class="form-control" value="{{ detalle.direccion }}" readonly>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label>Telefono</label>
+                    <input type="text" class="form-control" value="{{ detalle.telefono }}" readonly>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label>Telefono 2</label>
+                    <input type="text" class="form-control" value="{{ detalle.telefono2 }}" readonly>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4 col-sm-12">
+                <div class="form-group">
+                    <label>Correo Electronico del Cliente</label>
+                    <input type="text" class="form-control" value="{{ detalle.correo }}" readonly>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </form>
+
+  
 </div>
-
-<script >
-    function filtro() {
-      // Accede al texto de entrada y a varios elementos del DOM
-      let valor = document.getElementById("filtrar").value.toUpperCase();
-      let nombres = document.getElementById("nombres");
-      let filas = nombres.getElementsByTagName("tr");
-    
-      // Iteramos el arreglo de filas
-      for(let i = 0; i < filas.length; i++){
-        // Por cada fila se obtiene la referencia a la columna negocio
-        let columnaLenguaje = filas[i].getElementsByTagName("td")[1];
-        console.log(columnaLenguaje);
-        // Se extrae el texto de la columna referencia
-        let lenguaje = columnaLenguaje.textContent;
-        // Se muestra u oculta la fila si la entrada de texto
-        // coincide con el texto de la columna lenguaje
-        filas[i].style.display = lenguaje.toUpperCase().indexOf(valor) > -1 ? "" : "none";
-      }
-    }
-    
-    // Se agrega un escuchador de eventos a la entrada de texto
-    // para activar la función de filtrado cada vez que el usuario
-    // ingresa texto en la entrada
-    document.getElementById("filtrar").addEventListener("keyup", filtro);
-    </script>
-
 
 {% endblock %}
