--- a/InventariosApp/templates/InventariosApp/clientes.html
+++ b/InventariosApp/templates/InventariosApp/clientes.html
@@ -8,6 +8,17 @@
         <h4 class="text-info h4">Inventario de Clientes</h4>
         <input type="text" class="form-control" id="filtrar" placeholder="Filtrar Por Negocio" name="f" autofocus="f" />
     </div>
+    {% if messages %}
+          <ul class="messages">
+          {% for message in messages %}
+          <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>{{message}}</strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          {% endfor %}
+    {% endif %}
     <div class="pb-20">
         <table class="data-table table stripe hover nowrap table-responsive-lg">
             <thead>
@@ -41,7 +52,7 @@
                             </a>
                             <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
                                 <a class="dropdown-item" href="{% url 'VerCliente' inventario.nit %}"><i class="dw dw-eye"></i> Ver</a>
-                                <a class="dropdown-item" href="#"><i class="dw dw-edit2"></i> Editar</a>
+                                <a class="dropdown-item" href="{% url 'UpdateCliente' inventario.nit %}"><i class="dw dw-edit2"></i> Editar</a>
                                 <a class="dropdown-item" href="#"><i class="dw dw-delete-3"></i> Borrar</a>
                             </div>
                         </div>
