--- a/ActualizarApp/templates/ActualizarApp/articulos.html
+++ b/ActualizarApp/templates/ActualizarApp/articulos.html
@@ -5,7 +5,7 @@
 
 <div class="pd-ltr-20">
     <div class="card-box pd-20 height-100-p mb-30">
-        <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
+        <form action="" method="POST" enctype=multipart/form-data>{% csrf_token %}
             <div class="container overflow-hidden">
                 <h3>Modificacion de Articulo</h3><hr><br>
                 <div class="row gy-5">
