Gracias a Dios Iniciando Modulo Ventas Jueves Tarde

--- a/BaseApp/templates/BaseApp/base.html
+++ b/BaseApp/templates/BaseApp/base.html
@@ -98,7 +98,7 @@
 							<span class="micon dw dw-money"></span><span class="mtext">Caja</span>
 						</a>
 						<ul class="submenu">
-							<li><a href="#">Nueva Venta</a></li>
+							<li><a href="{% url 'IniciarVenta' %}">Nueva Venta</a></li>
 							<li><a href="#">Actualizar Venta</a></li>
 							<li><a href="#">Eliminar Venta</a></li>
 							<li><a href="#">Historial Venta</a></li>
